syntax = "proto3";
package v1;
message HelloRequest{
  string name = 1;
}
message HelloResponse{
  string helloString = 1;
}
// 服务HelloWorld
service HelloWorldService{
  rpc hello (HelloRequest) returns (HelloResponse){}
}