syntax = "proto3";
package v1;
message Response {
  int64 Code = 1;
  string Msg = 2;
  string Token = 3;
}

message User {
  string Account = 1;
  string Password = 2;
}

message Success {
  bool Success = 1;
}

//  用户注册注册
message CreateRequest {
  string Version =1;
  User User = 2;
}

// 用户登录请求
message LoginRequest{
  string Version =1;
  User User = 2;
}



// 用户服务
service UserService {
  rpc Create(CreateRequest) returns (Response){}
  rpc Login(LoginRequest) returns (Response){}
}

